# qwen3.5-gemma4-moe-flash-mlx-turbo-quant

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MEMORY.md  README.md  build.rs
src/: cache.rs  config.rs  engine.rs  ffi.rs  ffi_zerocopy.cpp  main.rs  memory.rs  perf.rs  predictor.rs  splitter.rs  tokenizer.rs
src/model/: attention.rs  gated_delta.rs  gemma4_attention.rs  mlp.rs  mod.rs  moe.rs  norm.rs
